News contract added

--- a/decent/tsconfig.json
+++ b/decent/tsconfig.json
@@ -8,7 +8,9 @@
     "skipLibCheck": true,
     "resolveJsonModule": true
   },
-  "include": [],
+  "include": [
+    "frontend/**/*"
+  ],
   "exclude": [
     "node_modules",
     "ignition"
