--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@hookform/resolvers": "^3.3.4",
     "@mdx-js/loader": "^3.0.1",
     "@mdx-js/react": "^3.0.1",
+    "@metamask/providers": "^17.1.2",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@next/mdx": "^14.1.4",
     "@prisma/client": "^5.11.0",
@@ -76,6 +77,7 @@
     "drizzle-orm": "^0.29.0",
     "drizzle-zod": "^0.5.1",
     "embla-carousel-react": "^8.0.0",
+    "ethers": "^6.13.2",
     "input-otp": "^1.2.2",
     "lucide-react": "^0.359.0",
     "next": "^14.1.4",
