docker commands added to makefile

--- a/.env.example
+++ b/.env.example
@@ -12,7 +12,7 @@ NEXTAUTH_SECRET="somesecret"
 # -----------------------------------------------------------------------------
 # Database (MySQL - PlanetScale)
 # -----------------------------------------------------------------------------
-DATABASE_URL="mongodb://admin:password@localhost:27017"
+DATABASE_URL="postgresql://admin:password@localhost:5432/mydatabase"
 
 GITHUB_CLIENT_ID="jnjddcdckkcmdcsm"
 GITHUB_CLIENT_SECRET="kkzskmsxmkxsmxmlsmlsalalk"
