--- a/decent/Makefile
+++ b/decent/Makefile
@@ -2,7 +2,7 @@ compile:
 	npx hardhat compile
 
 deploy:
-	npx hardhat ignition deploy ./ignition/modules/News.ts --network ganache
+	npx hardhat ignition deploy ./ignition/modules/FuseNews.ts --network ganache
 
 server:
 	nodemon --watch 'frontend/**/*.html' --exec 'ts-node' frontend/server.ts
